# nextjs-fastapi-auth-template

./: .pre-commit-config.yaml  README.md  docker-compose.yml  ruff.toml
.github/workflows/: ci.yml
api/: .gitignore  .pdm-python  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml
api/app/: __main__.py  conftest.py  gunicorn_runner.py  settings.py
api/app/database/: base.py  dependencies.py  meta.py  utils.py
api/app/database/migrations/: env.py
api/app/database/models/: __init__.py  users.py
api/app/routers/: application.py  lifetime.py
api/app/routers/api/: router.py
api/app/routers/api/echo/: router.py
api/app/routers/api/monitoring/: __init__.py
api/app/routers/api/users/: router.py
api/app/tests/: test_echo.py
api/migrations/versions/: 3c2935c5d847_created_base_tables.py
site/: .env.sample  .eslintrc.json  README.md  package.json
site/components/: Form.tsx  Header.tsx  Layout.tsx  form.tsx  icons.tsx  navbar.tsx  theme-switch.tsx
site/config/: site.ts
site/layouts/: default.tsx
site/lib/: lib.ts  session.ts  use-session.ts  useUser.ts
site/pages/: _app.tsx  index.tsx  login.tsx  profile-sg.tsx  profile-ssr.tsx  register.tsx
site/pages/api/: login.ts  logout.ts  register.ts  session.ts  user.ts
