[project]
name = "template-api"
version = "0.1.0"
description = "..."
authors = [{ name = "Xithrius", email = "xithrius@gmail.com" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.28.1",
    "gunicorn==21.2.0",
    "sqlalchemy[asyncio]==2.0.28",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "httpx==0.27.0",
    "httptools==0.6.1",
    "yarl==1.9.4",
    "ujson==5.9.0",
    "python-dotenv==1.0.1",
    "loguru==0.7.2",
    "fastapi-users[sqlalchemy]>=12.1.2",
    "httpx-oauth>=0.10.2",
    "prometheus-client>=0.17.0",
    "prometheus-fastapi-instrumentator>=6.0.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
precommit = ["pre-commit==3.6.2"]
test = [
    "pytest==8.1.1",
    "anyio==4.3.0",
    "pytest-cov==4.1.0",
    "pytest-env==1.1.3",
    "pytest-xdist==3.5.0",
    "psycopg==3.1.18",
    "testcontainers[postgres]==4.2.0rc2",
    "gevent==24.2.1",
]

[tool.pdm.scripts]
start = "python3 -m app"

# Linting and formatting
lint = "pre-commit run --all-files"
precommit = "pre-commit install"

# Database migrating
migrate = "alembic revision --autogenerate -m"
upgrade = "alembic upgrade head"

# Testing
test = "pytest --ff"
atest = "pytest -n auto --ff"
vtest = "pytest -vvv --ff"
retest = "pytest --lf"

# Coverage
test-cov = "pytest --cov=./ --cov-report=xml"
html = "coverage html"
report = "coverage report --sort=Cover"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
